products/platform-core/applications/argocd/manifests/gateway.yml
# ===========================================================
# Purpose:  
# Notes:
# ===========================================================
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gatewa-argocd
  namespace: envoy-gateway-system
  labels:
    traffic-profile: shared
  annotations: 
    external-dns.alpha.kubernetes.io/target: anykey.pl
spec:
  gatewayClassName: envoy
  listeners:

    - name: argocd-http 
      protocol: HTTP
      port: 80
      hostname: argocd.anykey.pl
      allowedRoutes:
        namespaces:
          from: All

    # -- Entry ------------
    # This definition needs to be unique
    # This will be merged at gatway-backend
    - name: argocd-https
      protocol: HTTPS
      port: 443
      hostname: argocd.anykey.pl

    # Here we are defingin TLS configuration
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls-certificate 

      # Allow consuming this definition across whole cluster
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
---
