products/platform-core/applications/argocd/manifests/httproute.yml
# ===========================================================
# Purpose:  
# Notes:
# ===========================================================
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-host
  namespace: argocd 
spec:
  parentRefs:
    - name: gateway-argocd
      namespace: envoy-gateway-system
      sectionName: argocd-http
    - name: gateway-argocd
      namespace: envoy-gateway-system
      sectionName: argocd-https
  hostnames:
    - argocd.anykey.pl
  rules:
    - backendRefs:
        - kind: Service
          name: argocd-server
          namespace: argocd-server
          port: 80
---
